--- a/RestPackage/CarAuthorizationREST.html
+++ b/RestPackage/CarAuthorizationREST.html
@@ -122,7 +122,7 @@ $('.navPadding').css('padding-top', $('.fixedNav').css("height"));
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>restpackage.CarAuthorizationREST</li>
+<li>controller.CarAuthorizationREST</li>
 </ul>
 </li>
 </ul>
